feature BA-0006 add function spring security

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <jstl.version>1.2</jstl.version>
         <postgresql.version>42.2.5</postgresql.version>
         <hibernate.version>5.3.6.Final</hibernate.version>
+        <spring.security.version>4.2.8.RELEASE</spring.security.version>
     </properties>
 
     <!-- Библиотеки -->
@@ -41,6 +42,23 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+
+        <!-- Sping security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
         </dependency>
 
         <!-- spring ORM -->
