feature BA-0006 add function spring  jackson

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <postgresql.version>42.2.5</postgresql.version>
         <hibernate.version>5.3.6.Final</hibernate.version>
         <spring.security.version>4.2.8.RELEASE</spring.security.version>
+        <jackson.version>2.7.8</jackson.version>
     </properties>
 
     <!-- Библиотеки -->
@@ -101,6 +102,23 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
+        </dependency>
+
+        <!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
